<resources>
    <string name="app_name">Assignment1</string>
    <string name="action_settings">Settings</string>
    <string name="activity_a_label">Activity A</string>
    <string name="activity_b_label">Activity B</string>
    <string name="dialog">Dialog</string>
    <string name="btn_start_b_label">Start Activity B</string>
    <string name="btn_finish_b_label">Finish Activity B</string>
    <string name="close_activity_a">Close Activity A</string>
    <string name="dialog_text">Simple Dialog</string>
    <string name="close">Close</string>
    <string name="title_activity_activity_b">ActivityB</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="activity_b_content">Activity B occupies the complete window real estate. The Android OS forces Activity A to be paused.</string>

</resources>
