<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img8"
    android:padding="8dip">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_a_label"
        android:gravity="center_horizontal"
        android:textSize="@dimen/font_large"
        android:textColor="@color/colorPrimary"
        android:paddingBottom="16dip"
        android:typeface="serif"

        />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:id="@+id/btn_start_b"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btn_start_b_label"
            android:onClick="startActivityB"
            android:textColor="@color/green"
            />

        <Button
            android:id="@+id/btn_start_dialog"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dialog"
            android:layout_toRightOf="@id/btn_start_b"
            android:onClick="startDialog"
            android:textColor="@color/green"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"
        android:text="THREAD COUNTER"
        android:typeface="serif"
        android:textColor="@color/pink"
        android:gravity="center"/>
    <TextView
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="4dip"
        android:typeface="monospace"
        android:gravity="center"
        android:textSize="@dimen/font_medium"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_finish_a"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/close_activity_a"
            android:layout_centerInParent="true"
            android:onClick="finishActivityA"
            android:textColor="@color/green"
            />
    </RelativeLayout>

    </LinearLayout>
